--- a/index1.html
+++ b/index1.html
@@ -16,7 +16,7 @@
     </address>
     <a href="https://www.facebook.com/anikazeba.anika/" target="-blank">This is Facebooklink</a>
     <p>
-    <img src="image.jpg" alt=ZebaAnika width="140" height="142">
+    <img src="image.jpg" alt=ZebaAnika width="140" height="142";>
     </p>
     <hr>
     <p>
